@@ -4,6 +4,7 @@ import unittest
 import pickle
 import gc
 import io
+import inspect
 
 from stackless import schedule, tasklet, stackless
 
@@ -609,6 +610,50 @@ class TestDictViewPicklingPy(AbstractTestPickledTasklets, DictViewPicklingTestCa
 
 
 class TestDictViewPicklingC(AbstractTestPickledTasklets, DictViewPicklingTestCases, CPickleMixin):
+    pass
+
+
+class Traceback_TestCases(object):
+    def testTracebackFrameLinkage(self):
+        def a():
+            # raise an exception
+            1 // 0
+
+        def b():
+            return a()
+
+        def c():
+            return b()
+
+        try:
+            c()
+        except ZeroDivisionError:
+            tb = sys.exc_info()[2]
+
+        innerframes_orig = inspect.getinnerframes(tb)
+        p = self.dumps(tb)
+        tb2 = self.loads(p)
+        # basics
+        self.assertIs(type(tb), type(tb2))
+        self.assertIsNot(tb, tb2)
+        innerframes = inspect.getinnerframes(tb2)
+        # compare the content
+        self.assertListEqual([i[1:] for i in innerframes_orig], [i[1:] for i in innerframes])
+        # check linkage
+        all_outerframes_orig = inspect.getouterframes(innerframes_orig[-1][0])
+        all_outerframes = inspect.getouterframes(innerframes[-1][0])
+        l = len(innerframes_orig)
+        self.assertGreater(len(all_outerframes_orig), l)
+        self.assertGreaterEqual(len(all_outerframes), l)
+        # compare the content
+        self.assertListEqual([i[1:] for i in all_outerframes_orig[:l - 1]], [i[1:] for i in all_outerframes[:l - 1]])
+
+
+class TestTracebackPy(StacklessTestCase, Traceback_TestCases, PyPickleMixin):
+    pass
+
+
+class TestTracebackC(StacklessTestCase, Traceback_TestCases, CPickleMixin):
     pass
 
 if __name__ == '__main__':
