@@ -9,6 +9,10 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issues/107
+  Improve unpickling of traceback objects. Stackless now reconstructs the
+  frame.f_back linkage in frames directly referenced by traceback objects.
+
 - https://bitbucket.org/stackless-dev/stackless/issues/110
   Remove the already non functional remains of psyco support.
 
